--- a/.github/workflows/lua-lint.yml
+++ b/.github/workflows/lua-lint.yml
@@ -17,7 +17,7 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v6
+        uses: actions/checkout@v4
         with:
           ref: ${{ github.event.pull_request.head.sha }}
 
@@ -25,7 +25,7 @@ jobs:
         shell: powershell
         run: |
           if (-Not (Test-Path "C:\tools\luacheck.exe")) {
-            Write-Error "Luacheck non trovato in C:\tools\luacheck.exe. Scarica il binario e mettilo in questa cartella."
+            Write-Error "Luacheck non trovato in C:\tools\luacheck.exe"
           } else {
             C:\tools\luacheck.exe --version
           }
@@ -33,13 +33,18 @@ jobs:
       - name: Run Luacheck
         shell: powershell
         run: |
-          # genera report JUnit manualmente
-          C:\tools\luacheck.exe . --config .luacheckrc --formatter JUnit --codes > junit.xml
+          Write-Host "Running Luacheck..."
+          C:\tools\luacheck.exe . `
+            --config .luacheckrc `
+            --formatter JUnit `
+            --codes `
+            1> junit.xml `
+            2> luacheck.log || exit 0
 
       - name: Publish Luacheck Report
         if: always()
         uses: mikepenz/action-junit-report@v6
         with:
-          report_paths: "junit.xml"
-          check_name: "Lua Lint Report"
+          report_paths: junit.xml
+          check_name: Lua Lint Report
           fail_on_failure: false
